<resources>
    <string name="app_name">Codename: Catfish</string>
    <string name="stats">Stats</string>
    <string name="play">Play!</string>
    <string name="rules">How to play?</string>
    <string name="about">About</string>
    <string name="unlocked_sounds">Unlocked Sounds</string>
    <string name="statistics">Statistics</string>
    <string name="bonzi">"
                                      /##/*
                                  ##(########%.
                                ,###%%%%%%%%#%%/
                                ,##.   ,.  .*#%/
                                %#/..@@,.$@*,(#%
                              ###**,,/////(**,*/%%(
                              #*,......,,..,,***/#*
                               /,,*,.......,**(*//
                               *#(///,,,,,*/((###                    ,,,(
        ,,**                   ,#%%%%%#########%%%                 ,.*(
          *,../              (#(//,,*/////////(######          /((,.,*,,**,..,(
  (**,,.,..,.../####*     ((////(/,,....,,,***//#(///((#*  ##(##%%*,,.,,*,.,*#/
    /,,,,..,*((.$%%####%#(//(##(*,..........,,,**/#(((((######%%%
                 %$%%%##%(###%(*,,,.......,,,,,**//%%%######%%%
                   ,$%%%%%%$$%(/**,,,,,,,,,*****//(%%#.%%%%$%
                      ,,,    $%((//*****///////((##%%
                             %%$%#((((((((((#####%%%%/
                            /####%$%%%%%%%%%%%%%%%%###
                            *%#####%%%.     $%%%%%#%%
                              $%%%%%%%       $%%%%%%.
                                $$%%%%%     %%%$$$#
                             /##(((#((##   ##(((((###*
                          ((#(##(#/  *      */ ,(#(#((((
    "</string>
    <string name="collin_d">Collin :D</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="splashTextPlaceholder">TEXT</string>
    <string name="easy_sequence_of_5_normal_10_hard_15">Easy = Sequence of 5, Normal = 10, Hard = 15</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="two_repeats_left">Repeat Sequence (2 left)</string>
    <string name="one_repeats_left">Repeat Sequence (1 left)</string>
    <string name="zero_repeats_left">Repeat Sequence (0 left)</string>
    <string name="repeat_sequence_3_left">Repeat Sequence (3 left)</string>
    <string name="no_repeats_left">Out of repeats!</string>
    <string name="player_stats">Player Stats:</string>
    <string name="times_played_lbl">Times played:</string>
    <string name="times_played">0</string>
    <string name="highest_score_lbl">Highest score:</string>
    <string name="highest_score">0</string>
    <string name="sounds_unlocked_lbl">Sounds unlocked:</string>
    <string name="sounds_unlocked">0</string>
</resources>